feat: add handler, repository, responses and service for find user stages
